# dummy_project

./: .gitignore  .gitmodules  CMakeLists.txt  Calc.cpp  Calc.h  Calculator.cpp  Calculator.h  Main.cpp  Parser.cpp  Parser.h  Stack.cpp  Stack.h  Token.cpp  Token.h  calculator.cc  calculator.h  executor.cpp  executor.h  icalculator.h  imovie.h  imovie_repo.h  iproject.h  irental.h  irental_factory.h  irental_record.h  main.cc  movie.cc  movie.h  movie_repo.cc  movie_repo.h  project.cc  project.h  rental.cc  rental.h  rental_factory.cc  rental_factory.h  rental_record.cc  rental_record.h  run.cpp  run.h  (+3 more)
CalcTestProject/: AssemblyInfo.cpp  CalcTestProject.vcxproj  UnitTest.cpp  stdafx.cpp
CalcTestProject/Release/: .NETFramework,Version=v4.0.AssemblyAttributes.asm  CalcTestProject.vcxprojResolveAssemblyReference.cache
CalcTestProject/Release/CalcTestProject.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CalcTestProject.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
test/: CMakeLists.txt  calculator_test.cc  main_test.cc  project_test.cc  singleTest.cpp
